<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="pe.tohure.designpatternswithtests.ui.customeraccountdetail.CustomerAccountDetailActivity">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="Mi primera cuenta" />

    <TextView
        android:id="@+id/lblMount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="S/. 1250" />

    <TextView
        android:id="@+id/lblAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Saldo disponible" />

</LinearLayout>
